Update guide version